# hexis

./: .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  .worktreeinclude  AGENTS.md  CLAUDE.md  README.md  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.githooks/: commit-msg  lefthook.yml  pre-commit  run-if-exists.sh
.opencode/: INSTALL.md
.opencode/plugins/: hexis.js
agents/: principles-reviewer.md
cli/: pyproject.toml
cli/src/hexis/: cli.py  parser.py  state.py
cli/tests/: test_cli.py  test_parser.py  test_state.py
commands/: commit.md  sync.md
docs/plans/: 2026-03-27-hw0k-workflow-enhancement-content.md  2026-03-27-hw0k-workflow-enhancement-infra.md  2026-03-27-hw0k-workflow-plugin.md  2026-03-27-skill-philosophy-rewrite.md  2026-04-01-issues-2-3-4-plan-mode-sync-pre-commit.md  2026-04-01-specify-artifact-enforcement.md  2026-04-06-dispatch-skill.md  2026-04-06-plan-decomposition.md  2026-04-08-universal-task-tool-integration.md  2026-04-19-hexis-rename.md  2026-04-19-universal-skill-support.md  2026-04-22-tdd-workflow-restructure.md  2026-04-23-document-formats.md  2026-04-29-hexis-cli-tool.md  2026-04-29-remove-platform-capabilities.md  2026-04-29-skill-integration-gate.md  2026-05-06-frontmatter-authority.md
docs/specs/: 2026-03-27-hw0k-workflow-enhancement-design.md  2026-03-27-hw0k-workflow-plugin-design.md  2026-03-27-skill-philosophy-rewrite-design.md  2026-03-27-testing-environment-design.md  2026-04-01-migrate-lefthook-to-pre-commit-design.md  (+16 more)
(+55 files in other folders)
