[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
hexis = "hexis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hexis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
